# restaurant_hotel_management

./: .gitignore  MANIFEST.in  README.md  index.html  install.sh  license.txt  pyproject.toml  setup.py
restaurant_hotel_management/: __init__.py  hooks.py  modules.txt  setup.py
restaurant_hotel_management/fixtures/: custom_fields.json
restaurant_hotel_management/public/css/: restaurant_hotel.css
restaurant_hotel_management/public/js/: pos_profile.js  restaurant_hotel.js  sales_invoice.js
restaurant_hotel_management/restaurant_hotel_management/api/: restaurant_api.py
restaurant_hotel_management/restaurant_hotel_management/doctype/restaurant_order/: restaurant_order.js  restaurant_order.json  restaurant_order.py
restaurant_hotel_management/restaurant_hotel_management/doctype/restaurant_order_item/: restaurant_order_item.json  restaurant_order_item.py
restaurant_hotel_management/restaurant_hotel_management/events/: sales_invoice.py
restaurant_hotel_management/restaurant_hotel_management/page/kitchen_display/: kitchen_display.js  kitchen_display.json
restaurant_hotel_management/restaurant_hotel_management/page/waiter_display/: waiter_display.js  waiter_display.json
restaurant_hotel_management/restaurant_hotel_management/workspace/hotel_management/: hotel_management.json
restaurant_hotel_management/restaurant_hotel_management/workspace/restaurant_management/: restaurant_management.json
