[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant_hotel_management"
version = "1.0.0"
description = "Comprehensive Restaurant and Hotel Management System for ERPNext"
authors = [
    {name = "Your Company", email = "support@yourcompany.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "frappe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/yourusername/restaurant_hotel_management"
Repository = "https://github.com/yourusername/restaurant_hotel_management.git"
Issues = "https://github.com/yourusername/restaurant_hotel_management/issues"

[tool.setuptools]
packages = ["restaurant_hotel_management"]
include-package-data = true

[tool.setuptools.package-data]
restaurant_hotel_management = [
    "**/*.json",
    "**/*.js",
    "**/*.css",
    "**/*.html",
    "**/*.py",
    "**/*.txt",
    "**/*.md"
]